analytics/docker/i2ap-processor/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: processor
  name: processor
  namespace: i2ap
spec:
  replicas: 5
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: processor
    spec:
      containers:
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.09
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
          "-instances=tt-cust-analytics:us-west1:tt-cust-analytics-mysql=tcp:3306,tt-cust-analytics:us-west1:tt-cust-analytics-postgres=tcp:127.0.0.1:5432",
          "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      - name: processor
        image: us.gcr.io/tt-cust-analytics/i2ap-processor:1.0.22
        imagePullPolicy: Always
        ports:
        - containerPort: 3101
          name: processor
        volumeMounts:
          - name: i2ap-glcoud-credentials
            mountPath: /secrets
            readOnly: true
          - name: email
            mountPath: /email
            readOnly: true
      volumes:
        - name: i2ap-glcoud-credentials
          secret:
            secretName: i2ap-glcoud-credentials
        - name: email
          configMap:
            name: email
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
