analytics/docker/i2ap-processor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: processor-service
  namespace: i2ap
spec:
  type: NodePort
  selector:
    app: processor
  ports:
    - protocol: TCP
      port: 3101
      targetPort: 3101
      name: processor
